# nes-lter-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dotenv.template  requirements.txt
client/: README.md  dotenv.template  pyproject.toml
client/examples/: authenticate.py  plot_cast.py
client/neslter/api/: __init__.py  client.py  utils.py
client_examples/: add_nearest_stations.py  auth_csv_post.py  client.py  dotenv.template  foo.csv  obtain_auth_token.py  parse_hdr.py
ims_data_root/: NES-LTER_station_list_compilation.xlsx
web/api/: models.py  parsers.py  queries.py  serializers.py  urls.py  utils.py  views.py  workflows.py
web/api/management/commands/: addstation.py  createdatabase.py  createstationlist.py  findneareststation.py  setstationlocation.py  updatestationlist.py
web/api/migrations/: 0001_initial.py  0002_cruisecast.py  0002_station_full_name.py
web/api/parsers/: ctd.py  utils.py
web/api/parsers/ctd/: api.py  asc.py  btl.py  common.py  hdr.py
web/web/: settings.py
