[tool.poetry]
name = "neslter"
version = "0.1.0"
description = ""
authors = ["Joe Futrelle <jfutrelle@whoi.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.0.0"
requests = ">=2.0.0"
python-dotenv = ">=0.0.0"
matplotlib = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
